Mon Jan 13 20:32:25 CET 2014
locale/openoffice-langpack-hu-4.0.1-i486-1_microlinux.txz: Added.
  Request from user aszabo on LQ.
+--------------------------+
Tue Jan  7 12:31:15 CET 2014
n/broadcom-sta-6.30.223.141_3.10.17_smp-i486-1_microlinux.txz: Added.
+--------------------------+
Thu Jan  2 15:32:04 CET 2014
l/podofo-0.9.2-i486-1_microlinux.txz: Added.
xap/scribus-1.4.3-i486-1_microlinux.txz: Added.
+--------------------------+
Wed Jan  1 11:36:03 CET 2014
xap/transmission-2.60-i486-1_microlinux.txz: Downgraded.
	Transmission's GTK3 client keeps forgetting its preferences. Until this gets
	sorted out, we're reverting to 2.60, the last know version to build the GTK2
	client (--with-gtk=2), which isn't affected by this bug. 
+--------------------------+
Mon Dec 30 14:27:32 CET 2013
Microlinux Enterprise Desktop 14.1 32-bit released! This is an LTS release,
which means packages will be maintained for as long as the underlying Slackware
system is officially supported.

MLED 14.1 32-bit provides the following extra software:

AP
|-- cdlabelgen
|-- p7zip
|-- recode
|-- sbopkg
`-- unrar

D
|-- acpica
|-- jdk
|-- lua
|-- numpy
|-- orc
|-- perl-cairo
|-- perl-event
|-- perl-extutils-depends
|-- perl-extutils-pkgconfig
|-- perl-glib
|-- perl-gtk2
|-- perl-libintl
|-- perl-pango
`-- scons

GNOME
|-- atkmm
|-- brasero
|-- cairomm
|-- evince
|-- gdm
|-- glibmm
|-- gnote
|-- goocanvas
|-- gthumb
|-- gtkmm
|-- libgnomecanvas
|-- libgnomecups
|-- libgnomeprint
|-- libgnomeprintui
|-- libsigc++
|-- libunique
|-- mm-common
|-- pangomm
|-- pygoocanvas
`-- totem-pl-parser

L
|-- BeautifulSoup
|-- cryptopp
|-- enca
|-- gsl
|-- imlib2
|-- jbig2dec
|-- libburn
|-- libisoburn
|-- libisofs
|-- lxml
|-- protobuf
|-- pysetuptools
|-- pyxdg
|-- tolua++
`-- wxGTK

LOCALE
|-- mozilla-firefox-l10n
|-- mozilla-thunderbird-l10n
`-- openoffice-langpack

MULTIMEDIA
|-- a52dec
|-- cddb-py
|-- celt
|-- dirac
|-- faac
|-- faad2
|-- ffmpeg
|-- flashplayer-plugin
|-- frei0r
|-- gsm
|-- gst-ffmpeg