@@ -1,0 +1,2 @@
+[Desktop Entry]
+NoDisplay=true
