@@ -1,0 +1,14 @@
+[Desktop Entry]
+Version=1.0
+Name=Multimedia Converter
+Name[de]=Multimedia-Konvertierer
+Name[fr]=Convertisseur multimédia
+Comment=WinFF
+MimeType=application/winff;
+Exec=winff
+Icon=winff
+Terminal=false
+Type=Application
+Categories=AudioVideo;AudioVideoEditing;GTK;
+StartupNotify=true
+
